--- a/book/math_foundations/labs/probability-moments.ipynb
+++ b/book/math_foundations/labs/probability-moments.ipynb
@@ -25,6 +25,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import pandas as pd\n",
     "import plotly.express as px\n",
     "from scipy import stats\n",
     "\n",
@@ -49,13 +50,19 @@
     "- Continu: $\\mathbb{E}[x] = \\int x \\cdot p(x) dx$\n",
     "\n",
     "## ✍️\n",
-    "Bereken de verwachtingswaarde voor een eerlijke dobbelsteen."
+    "Bereken de verwachtingswaarde voor een oneerlijke dobbelsteen met de volgende kansverdeling:\n",
+    "- P(1) = 0.10\n",
+    "- P(2) = 0.15\n",
+    "- P(3) = 0.20\n",
+    "- P(4) = 0.10\n",
+    "- P(5) = 0.15\n",
+    "- P(6) = 0.30"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b27c6989",
+   "id": "c5cd2f00",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -72,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbcdb575",
+   "id": "74869741",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -96,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96813a49",
+   "id": "ea5fbba7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -112,13 +119,18 @@
     "- **Modus**: De meest waarschijnlijke waarde (hoogste kans bij discreet, maximum van PDF bij continu)\n",
     "\n",
     "## ✍️\n",
-    "Vergelijk verwachtingswaarde, mediaan en modus voor verschillende verdelingen."
+    "Vergelijk verwachtingswaarde, mediaan en modus voor de volgende drie distributies:\n",
+    "1. **Symmetrische verdeling**: Normale verdeling $N(0, 1)$\n",
+    "2. **Rechts-scheve verdeling**: Log-normale verdeling met parameters $s=0.8$, $\\text{scale}=1$\n",
+    "3. **Links-scheve verdeling**: Beta verdeling met parameters $\\alpha=8$, $\\beta=2$\n",
+    "\n",
+    "Bereken voor elke distributie het gemiddelde (mean), de mediaan en de modus, en visualiseer deze."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27fe27ba",
+   "id": "503d3da9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -145,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "708a0a97",
+   "id": "ba24d933",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -169,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ad4182c",
+   "id": "59e69853",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -182,13 +194,13 @@
     "### Vergelijking van spreiding tussen verdelingen\n",
     "\n",
     "## ✍️\n",
-    "Visualiseer normale verdelingen met verschillende standaardafwijkingen maar hetzelfde gemiddelde."
+    "Visualiseer normale verdelingen met verschillende standaardafwijkingen (bv. 0.5, 1.0, 2.0 en 3.0) maar hetzelfde gemiddelde (bv. 15)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4b5eed7",
+   "id": "fb2021ea",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -213,7 +225,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72c72fd0",
+   "id": "532af204",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate data with outliers\n",
+    "normal_data = rng.normal(0, 1, 200)\n",
+    "outliers = np.array([5, 5.5, -4.5, -5, 6])\n",
+    "data = np.concatenate([normal_data, outliers])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d66039a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -236,13 +261,41 @@
     "- ~0: geen lineaire samenhang\n",
     "\n",
     "## ✍️\n",
-    "Bereken covariantie voor verschillende relaties tussen variabelen."
+    "Gegeven zijn drie datasets:\n",
+    "1. **Positieve correlatie**: $y = 2x + \\epsilon$ met $\\epsilon \\sim N(0, 0.5)$\n",
+    "2. **Negatieve correlatie**: $y = -1.5x + \\epsilon$ met $\\epsilon \\sim N(0, 0.5)$\n",
+    "3. **Geen correlatie**: $x$ en $y$ zijn onafhankelijk normaal verdeeld\n",
+    "\n",
+    "Bereken de covariantie voor elk van deze datasets."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5588521",
+   "id": "c141790f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generating three datasets with different relationships\n",
+    "n = 1000\n",
+    "\n",
+    "# Dataset 1: Positive correlation - y = 2x + noise\n",
+    "x1 = rng.normal(0, 1, n)\n",
+    "y1 = 2 * x1 + rng.normal(0, 0.5, n)\n",
+    "\n",
+    "# Dataset 2: Negative correlation - y = -1.5x + noise\n",
+    "x2 = rng.normal(0, 1, n)\n",
+    "y2 = -1.5 * x2 + rng.normal(0, 0.5, n)\n",
+    "\n",
+    "# Dataset 3: No correlation - independent\n",
+    "x3 = rng.normal(0, 1, n)\n",
+    "y3 = rng.normal(0, 1, n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13cccffa",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -271,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c975c7ad",
+   "id": "a7281dcf",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -284,13 +337,44 @@
     "### Correlatie bij verschillende sterktes\n",
     "\n",
     "## ✍️\n",
-    "Visualiseer relaties met verschillende correlatiesterktes."
+    "Gegeven zijn vier datasets met verschillende correlatiesterktes:\n",
+    "- Dataset 1: zeer sterke positieve correlatie (ρ ≈ 0.95)\n",
+    "- Dataset 2: matige positieve correlatie (ρ ≈ 0.7)\n",
+    "- Dataset 3: zwakke positieve correlatie (ρ ≈ 0.3)\n",
+    "- Dataset 4: geen correlatie (ρ ≈ 0)\n",
+    "\n",
+    "Visualiseer deze datasets en vergelijk de correlatiecoëfficiënten."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc84e6c7",
+   "id": "10262ba0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate data with four specific correlation strengths\n",
+    "n = 500\n",
+    "rho_targets = [0.95, 0.7, 0.3, 0]\n",
+    "\n",
+    "datasets = []\n",
+    "for rho_true in rho_targets:\n",
+    "    # Generate correlated data\n",
+    "    x = rng.normal(0, 1, n)\n",
+    "    noise_scale = np.sqrt(1 - rho_true**2) if rho_true < 1 else 0.01\n",
+    "    y = rho_true * x + noise_scale * rng.normal(0, 1, n)\n",
+    "\n",
+    "    # Calculate actual correlation and covariance\n",
+    "    rho_actual = np.corrcoef(x, y)[0, 1]\n",
+    "    cov = np.cov(x, y)[0, 1]\n",
+    "\n",
+    "    datasets.append({\"x\": x, \"y\": y, \"rho_target\": rho_true, \"rho_actual\": rho_actual, \"cov\": cov})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a9fec3b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -305,13 +389,43 @@
     "Covariantie/correlatie meet alleen **lineaire** samenhang. Er kan een sterk niet-lineair verband bestaan met correlatie ≈ 0.\n",
     "\n",
     "## ✍️\n",
-    "Demonstreer niet-lineaire afhankelijkheid met correlatie ≈ 0."
+    "Gegeven zijn drie datasets met niet-lineaire relaties maar correlatie ≈ 0:\n",
+    "1. **Circulaire relatie**: $(x, y)$ liggen op concentrische cirkels\n",
+    "2. **Kwadratische relatie**: $y = x^2 + \\epsilon$\n",
+    "3. **Absolute waarde**: $y = |x| + \\epsilon$\n",
+    "\n",
+    "Bereken de correlatie voor elk van deze datasets en observeer dat deze bijna nul is ondanks duidelijke afhankelijkheid."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6453f8b",
+   "id": "1a7cf467",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate three datasets with non-linear relationships\n",
+    "n = 1000\n",
+    "\n",
+    "# Dataset 1: Circular pattern\n",
+    "theta = rng.uniform(0, 2 * np.pi, n)\n",
+    "r = rng.uniform(0.5, 2, n)\n",
+    "x_circle = r * np.cos(theta)\n",
+    "y_circle = r * np.sin(theta)\n",
+    "\n",
+    "# Dataset 2: Quadratic relationship y = x²\n",
+    "x_quad = rng.uniform(-3, 3, n)\n",
+    "y_quad = x_quad**2 + rng.normal(0, 0.5, n)\n",
+    "\n",
+    "# Dataset 3: Absolute value y = |x|\n",
+    "x_abs = rng.uniform(-3, 3, n)\n",
+    "y_abs = np.abs(x_abs) + rng.normal(0, 0.3, n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd674f85",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -337,7 +451,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b081cd2",
+   "id": "bf01f9a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate multivariate data with specific covariance structure\n",
+    "n = 1000\n",
+    "mean = [0, 0, 0]\n",
+    "cov_true = np.array(\n",
+    "    [\n",
+    "        [1.0, 0.7, -0.3],  # var(x1), cov(x1,x2), cov(x1,x3)\n",
+    "        [0.7, 1.5, 0.5],  # cov(x2,x1), var(x2), cov(x2,x3)\n",
+    "        [-0.3, 0.5, 0.8],  # cov(x3,x1), cov(x3,x2), var(x3)\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "data = rng.multivariate_normal(mean, cov_true, n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c90bb836",
    "metadata": {},
    "outputs": [],
    "source": []
