after probability lesson 2

--- a/book/math_foundations/labs/probability-joint.ipynb
+++ b/book/math_foundations/labs/probability-joint.ipynb
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e4fe1e7",
+   "id": "d3689cdf",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fecf4437",
+   "id": "7178f59e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abdd2966",
+   "id": "a4ecaae4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -117,118 +117,13 @@
     "$$P(y|x) = \\frac{P(x, y)}{P(x)}$$\n",
     "\n",
     "## ✍️\n",
-    "Bereken en visualiseer de conditionele verdeling $P(y|x=3)$: wat is de kans op elke verplaatsingsmodus, gegeven dat het regent?"
+    "Bereken de conditionele verdeling $P(y|x \\in \\{2,3\\})$: wat is de kans op elke verplaatsingsmodus, gegeven dat het bewolkt is of regent?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "258424d5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "08e319b3",
-   "metadata": {},
-   "source": [
-    "## Continue Joint Distributions: Bivariate Gaussian\n",
-    "\n",
-    "Voor continue variabelen gebruiken we joint PDFs. Een belangrijk voorbeeld is de bivariate Gauss-verdeling.\n",
-    "\n",
-    "## ✍️\n",
-    "Visualiseer een bivariate normale verdeling met correlatie en bereken marginale/conditionele verdelingen."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c2b97f6f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "372b2004",
-   "metadata": {},
-   "source": [
-    "## ✍️\n",
-    "Bereken en visualiseer de conditionele verdeling $p(x|y=y_0)$ voor een specifieke waarde van $y$."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0f5b9717",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f6a1b382",
-   "metadata": {},
-   "source": [
-    "## Onafhankelijkheid\n",
-    "\n",
-    "Twee random variabelen zijn **onafhankelijk** als:\n",
-    "$$P(x, y) = P(x) \\cdot P(y)$$\n",
-    "\n",
-    "Equivalentie: als $x \\perp y$, dan $P(x|y) = P(x)$\n",
-    "\n",
-    "## ✍️\n",
-    "Vergelijk een bivariate verdeling met correlatie $\\rho = 0$ (onafhankelijk) met $\\rho = 0.7$ (afhankelijk)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4fc5f44a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e22c1652",
-   "metadata": {},
-   "source": [
-    "## ✍️ Productregel\n",
-    "\n",
-    "De productregel stelt dat elke joint distributie kan worden ontleed in conditionele distributies:\n",
-    "\n",
-    "$$P(x, y) = P(y|x) \\cdot P(x) = P(x|y) \\cdot P(y)$$\n",
-    "\n",
-    "Verifieer deze regel voor de weersomstandigheden x verplaatsingsmodus joint distributie."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "de87781d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b6652f33",
-   "metadata": {},
-   "source": [
-    "## Voorbeeld: Afhankelijke variabelen\n",
-    "\n",
-    "Laten we een voorbeeld bekijken waar variabelen duidelijk afhankelijk zijn.\n",
-    "\n",
-    "## ✍️\n",
-    "Simuleer data waarbij $y = 2x + \\epsilon$ met kleine ruis $\\epsilon$. Visualiseer de joint, marginal en conditional distributies."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "37573c5e",
+   "id": "3e09ddb8",
    "metadata": {},
    "outputs": [],
    "source": []
