--- a/book/math_foundations/labs/probability-moments.ipynb
+++ b/book/math_foundations/labs/probability-moments.ipynb
@@ -25,9 +25,6 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "import plotly.express as px\n",
-    "from scipy import stats\n",
     "\n",
     "# Set random seed\n",
     "rng = np.random.default_rng(42)"
@@ -50,19 +47,20 @@
     "- Continu: $\\mathbb{E}[x] = \\int x \\cdot p(x) dx$\n",
     "\n",
     "## ✍️\n",
-    "Bereken de verwachtingswaarde voor een oneerlijke dobbelsteen met de volgende kansverdeling:\n",
-    "- P(1) = 0.10\n",
-    "- P(2) = 0.15\n",
-    "- P(3) = 0.20\n",
-    "- P(4) = 0.10\n",
-    "- P(5) = 0.15\n",
-    "- P(6) = 0.30"
+    "De theoretische (populatie-)verdeling van het aantal klanten dat een bepaalde winkel per uur ontvangt, ziet er als volgt uit:\n",
+    "- P(5 klanten) = 0.10\n",
+    "- P(10 klanten) = 0.20\n",
+    "- P(15 klanten) = 0.35\n",
+    "- P(20 klanten) = 0.25\n",
+    "- P(25 klanten) = 0.10\n",
+    "\n",
+    "Bereken de verwachtingswaarde (het gemiddeld verwacht aantal klanten per uur)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5cd2f00",
+   "id": "58fa2064",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -73,37 +71,13 @@
    "metadata": {},
    "source": [
     "## ✍️\n",
-    "Simuleer dobbelsteenworp en toon aan dat het steekproefgemiddelde convergeert naar de verwachtingswaarde (Wet van Grote Aantallen)."
+    "Simuleer 10000 uren en toon aan dat het steekproefgemiddelde convergeert naar de verwachtingswaarde (Wet van Grote Aantallen)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74869741",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4b93aad6",
-   "metadata": {},
-   "source": [
-    "### Lineaire transformaties van verwachtingswaarden\n",
-    "\n",
-    "De verwachtingswaarde heeft handige eigenschappen bij lineaire transformaties:\n",
-    "\n",
-    "$$\\mathbb{E}[ax + b] = a \\cdot \\mathbb{E}[x] + b$$\n",
-    "$$\\mathbb{E}[x + y] = \\mathbb{E}[x] + \\mathbb{E}[y]$$\n",
-    "\n",
-    "## ✍️\n",
-    "Verifieer deze eigenschappen numeriek."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ea5fbba7",
+   "id": "e78e6841",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -130,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "503d3da9",
+   "id": "10621163",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -146,42 +120,22 @@
     "\n",
     "### Variantie en Standaardafwijking\n",
     "\n",
-    "**Variantie**: $\\text{Var}(x) = \\mathbb{E}[(x - \\mu)^2] = \\mathbb{E}[x^2] - (\\mathbb{E}[x])^2$\n",
+    "**Populatievariantie** (theoretische verdeling): $\\sigma^2 = \\text{Var}(x) = \\mathbb{E}[(x - \\mu)^2]$\n",
     "\n",
-    "**Standaardafwijking**: $\\sigma = \\sqrt{\\text{Var}(x)}$\n",
+    "**Steekproefvariantie** (empirische data): $s^2 = \\frac{1}{n-1}\\sum_{i=1}^{n}(x_i - \\bar{x})^2$\n",
+    "\n",
+    "**Standaardafwijking**: $\\sigma = \\sqrt{\\text{Var}(x)}$ (populatie) of $s = \\sqrt{s^2}$ (steekproef)\n",
+    "\n",
     "\n",
     "## ✍️\n",
-    "Bereken de variantie en standaardafwijking voor een eerlijke dobbelsteen."
+    "1. Bereken eerst de **populatievariantie** en **-standaardafwijking** voor de theoretische kansverdeling van het aantal klanten per uur.\n",
+    "2. Simuleer vervolgens data en bereken de **steekproefvariantie** en **-standaardafwijking**."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba24d933",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "77488594",
-   "metadata": {},
-   "source": [
-    "### Eigenschappen van variantie\n",
-    "\n",
-    "$$\\text{Var}(ax + b) = a^2 \\cdot \\text{Var}(x)$$\n",
-    "\n",
-    "Voor onafhankelijke variabelen:\n",
-    "$$\\text{Var}(x + y) = \\text{Var}(x) + \\text{Var}(y)$$\n",
-    "\n",
-    "## ✍️\n",
-    "Verifieer deze eigenschappen."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "59e69853",
+   "id": "c38883cf",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -191,16 +145,16 @@
    "id": "0ba2a713",
    "metadata": {},
    "source": [
-    "### Vergelijking van spreiding tussen verdelingen\n",
+    "### Vergelijking van spreiding tussen continue verdelingen\n",
     "\n",
     "## ✍️\n",
-    "Visualiseer normale verdelingen met verschillende standaardafwijkingen (bv. 0.5, 1.0, 2.0 en 3.0) maar hetzelfde gemiddelde (bv. 15)."
+    "Visualiseer normale verdelingen met verschillende standaardafwijkingen (bv. 2, 5, 10 en 15) maar hetzelfde gemiddelde (bv. 50 klanten per dag)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb2021ea",
+   "id": "64e4aa18",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -219,7 +173,7 @@
     "Uitschieters worden vaak gedefinieerd als waarden buiten $[Q_1 - 1.5 \\times \\text{IQR}, Q_3 + 1.5 \\times \\text{IQR}]$\n",
     "\n",
     "## ✍️\n",
-    "Bereken IQR en detecteer uitschieters in een dataset met extreme waarden."
+    "Bereken IQR en detecteer uitschieters in volgende dataset met extreme waarden."
    ]
   },
   {
@@ -238,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d66039a",
+   "id": "eca5aad7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -295,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13cccffa",
+   "id": "4f1df529",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -324,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7281dcf",
+   "id": "39f8eb19",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -374,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a9fec3b",
+   "id": "f34ec91c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -425,7 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd674f85",
+   "id": "a1a5eaa5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -451,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf01f9a1",
+   "id": "98dda090",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c90bb836",
+   "id": "dff33695",
    "metadata": {},
    "outputs": [],
    "source": []
