--- a/book/math_foundations/prob/probability.ipynb
+++ b/book/math_foundations/prob/probability.ipynb
@@ -1163,10 +1163,14 @@
     "### Variantie\n",
     "\n",
     "(target-variance)=\n",
-    "De **variantie** $\\text{Var}(x)$ of $\\sigma^2$ meet hoe ver waarden gemiddeld van de verwachtingswaarde afliggen in gekwadrateerde eenheden:\n",
+    "De **variantie** $\\text{Var}(x)$ of $\\sigma^2$ meet hoe ver waarden gemiddeld van de verwachtingswaarde afliggen in gekwadrateerde eenheden.\n",
+    "\n",
+    "#### Populatievariantie\n",
+    "\n",
+    "Voor de theoretische kansverdeling (de populatie) gebruiken we:\n",
     "\n",
     "$$\n",
-    "\\text{Var}(x) = \\mathbb{E}[(x - \\mu)^2] = \\mathbb{E}[x^2] - (\\mathbb{E}[x])^2\n",
+    "\\sigma^2 = \\text{Var}(x) = \\mathbb{E}[(x - \\mu)^2] = \\mathbb{E}[x^2] - (\\mathbb{E}[x])^2\n",
     "$$\n",
     "\n",
     "Voor discrete kansvariabelen:\n",
@@ -1182,10 +1186,63 @@
     ":::{note} 🌍\n",
     ":icon: false\n",
     ":class: simple\n",
-    "Voor een eerlijke dobbelsteen met $\\mu = 3.5$:\n",
+    "Stel dat een winkel dagelijks een aantal klanten ontvangt volgens een discrete kansverdeling:\n",
+    "\n",
+    "| Aantal klanten ($x$) | 10 | 15 | 20 | 25 | 30 |\n",
+    "|:---:|:---:|:---:|:---:|:---:|:---:|\n",
+    "| Kans $P(x)$ | 0.1 | 0.2 | 0.4 | 0.2 | 0.1 |\n",
+    "\n",
+    "Het verwachte aantal klanten per dag:\n",
     "$$\n",
-    "\\text{Var}(x) = (1-3.5)^2 \\cdot \\frac{1}{6} + (2-3.5)^2 \\cdot \\frac{1}{6} + \\ldots + (6-3.5)^2 \\cdot \\frac{1}{6} \\approx 2.92\n",
+    "\\mu = 10(0.1) + 15(0.2) + 20(0.4) + 25(0.2) + 30(0.1) = 20\n",
     "$$\n",
+    "\n",
+    "De (populatie)variantie:\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "\\sigma^2 &= (10-20)^2(0.1) + (15-20)^2(0.2) + (20-20)^2(0.4) \\\\\n",
+    "&\\quad + (25-20)^2(0.2) + (30-20)^2(0.1) \\\\\n",
+    "&= 100(0.1) + 25(0.2) + 0(0.4) + 25(0.2) + 100(0.1) \\\\\n",
+    "&= 30\n",
+    "\\end{align}\n",
+    "$$\n",
+    ":::\n",
+    "\n",
+    "#### Steekproefvariantie\n",
+    "\n",
+    "(target-sample-variance)=\n",
+    "In de praktijk kennen we de theoretische verdeling meestal niet en werken we met steekproeven. De **steekproefvariantie** $s^2$ schat de populatievariantie op basis van $n$ observaties $x_1, x_2, \\ldots, x_n$:\n",
+    "\n",
+    "$$\n",
+    "s^2 = \\frac{1}{n-1} \\sum_{i=1}^{n} (x_i - \\bar{x})^2\n",
+    "$$\n",
+    "\n",
+    "waarbij $\\bar{x} = \\frac{1}{n}\\sum_{i=1}^{n} x_i$ het steekproefgemiddelde is.\n",
+    "\n",
+    ":::{important}\n",
+    "We delen door $n-1$ in plaats van $n$ om een onvertekende schatter (_unbiased estimator_) te krijgen. Dit heet Bessel's correctie en compenseert voor het feit dat we $\\mu$ niet kennen en $\\bar{x}$ gebruiken, wat systematisch dichter bij de steekproefwaarden ligt dan de werkelijke populatiegemiddelde.\n",
+    ":::\n",
+    "\n",
+    ":::{note} 🌍\n",
+    ":icon: false\n",
+    ":class: simple\n",
+    "Veronderstel dat we in de winkel uit het vorige voorbeeld gedurende 5 dagen het aantal klanten observeren: $\\{18, 22, 19, 21, 20\\}$.\n",
+    "\n",
+    "Steekproefgemiddelde:\n",
+    "$$\n",
+    "\\bar{x} = \\frac{18 + 22 + 19 + 21 + 20}{5} = \\frac{100}{5} = 20\n",
+    "$$\n",
+    "\n",
+    "Steekproefvariantie:\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "s^2 &= \\frac{1}{5-1}\\left[(18-20)^2 + (22-20)^2 + (19-20)^2 + (21-20)^2 + (20-20)^2\\right] \\\\\n",
+    "&= \\frac{1}{4}\\left[4 + 4 + 1 + 1 + 0\\right] \\\\\n",
+    "&= \\frac{10}{4} = 2.5\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "Merk op dat de steekproefvariantie ($s^2 = 2.5$) afwijkt van de populatievariantie ($\\sigma^2 = 30$). Bij een grotere steekproef zou $s^2$ dichter bij $\\sigma^2$ liggen.\n",
     ":::\n",
     "\n",
     "Variantie van {u}`lineaire transformaties`:\n",
@@ -1199,9 +1256,12 @@
     "### Standaardafwijking\n",
     "\n",
     "(target-std)=\n",
-    "De standaardafwijking (of standaarddeviatie) $\\sigma$ is de wortel van de variantie:\n",
+    "De standaardafwijking (of standaarddeviatie) is de wortel van de populatie-/of steekproefvariantie:\n",
     "$$\n",
-    "\\sigma = \\sqrt{\\text{Var}(x)}\n",
+    "\\begin{align}\n",
+    "\\sigma &= \\sqrt{\\text{Var}(x)} \\cr\n",
+    "s &= \\sqrt{s^2}\n",
+    "\\end{align}\n",
     "$$\n",
     "\n",
     "Dit geeft de spreiding in dezelfde eenheden als de originele variabele (niet gekwadrateerd), wat interpretatie makkelijker maakt.\n",
