diffusion theory ready

--- a/book/ml_principles/series/nlp.ipynb
+++ b/book/ml_principles/series/nlp.ipynb
@@ -59,6 +59,7 @@
     "[![](../../../img/attention1.png)](https://arxiv.org/pdf/1706.03762)\n",
     "\n",
     "### _Self-attention_\n",
+    "(target-self-attention)=\n",
     "Door dit mechanisme kan een model bij het verwerken van een bepaald woord naar _alle_ andere woorden in de sequentie \"kijken\" en \"beslissen\" welke het belangrijkst zijn voor het begrip van dat specifieke woord. Voor mensen is dit evident, maar het is verre van evident gebleken om dit in _machine learning_ na te bootsen[^earlier].\n",
     "\n",
     "[^earlier]: Eerdere benaderingen zoals _RNN_, _LSTM_ en _GRU_ neurale netwerken schoten hier telkens in te kort.\n",
@@ -602,7 +603,7 @@
     "- Interpreteerbaarheid: Complexe, ontransparante architectuur\n",
     "- _Toxiciteit_: Kunnen ongepaste of schadelijke inhoud genereren - moeilijk om 100% te controleren\n",
     "- **_Hallucinaties_**: Kunnen **overtuigend feitelijk incorrecte _output_ genereren**\n",
-    "- {ref}`Over fitting <target-over-fitting>`: Kunnen trainingsdata memoriseren en lekken\n",
+    "- {ref}`Over fitting <target-over-fitting>`: Kunnen trainingsdata memoriseren en lekken. Door onrechtmatige scraping kunnen daardoor _copyright_ inbreuken tot stand komen.\n",
     "- _Training window_: Om modellen als kennisbronnen te gebruiken moeten we rekening houden met de _training data cutoff_ datum\n",
     "- _Context window_: Een _context window_ is het maximale aantal tokens dat het model tegelijk kan \"zien\". Dit kan 4.000 tokens zijn, 8.000, of zelfs meer dan een miljoen in de nieuwste modellen. Informatie buiten dit venster kan niet in rekening worden gebracht en moet, indien nodig, worden aangereikt via een database van _embeddings_[^rag].\n",
     "\n",
