--- a/book/math_foundations/linalg/dot_prod.ipynb
+++ b/book/math_foundations/linalg/dot_prod.ipynb
@@ -483,6 +483,7 @@
             "id": "0b5cd3ba",
             "metadata": {},
             "source": [
+                "(target-cosine-similarity)=\n",
                 "#### _Cosine similarity_\n",
                 "Vaak willen we ook de afstand _tussen_ 2 vectoren uitdrukken in een scalaire waarde, bijvoobeeld in de context van _similarity search_. In Euclidische ruimtes wordt dan vaak gekeken naar de cosinus van de hoek tussen 2 vectoren $cos({\\theta})$. Dit heet dan de _cosine similarity_ en wordt bekomen door het dot product te nemen en het te delen door de respectievelijke Euclidische normen:\n",
                 "$$\n",
