fix stability ai

--- a/book/ml_principles/vision/imggen.ipynb
+++ b/book/ml_principles/vision/imggen.ipynb
@@ -40,7 +40,7 @@
     ":::{note} 🤗 Stable Diffusion\n",
     ":icon: false\n",
     ":class: dropdown\n",
-    "<iframe src=\"https://stabilityai-stable-diffusion-3.5-large-turbo.hf.space\" frameborder=\"0\" width=\"850\" height=\"450\"></iframe>\n",
+    "<iframe src=\"https://stabilityai-stable-diffusion-3-5-large-turbo.hf.space\" frameborder=\"0\" width=\"850\" height=\"450\"></iframe>\n",
     ":::\n"
    ]
   },
@@ -333,7 +333,9 @@
     "- Inpainting: Het invullen of vervangen van delen van een beeld op een natuurlijke manier.\n",
     "- Outpainting: Het uitbreiden van een beeld buiten de oorspronkelijke grenzen.\n",
     "- Super-resolution: Het verhogen van de resolutie van beelden terwijl details worden toegevoegd.  \n",
+    "\n",
     "[![Hugging Face Spaces](https://img.shields.io/badge/%F0%9F%A4%97%20Hugging%20Face-Spaces-blue)](https://huggingface.co/spaces/Dharani0419/pixelperfect-pro-ai)\n",
+    "\n",
     "- Video generatie: bv. [Runway Gen-4](https://runwayml.com/research/introducing-runway-gen-4), [Sora](https://openai.com/sora/), [Veo](https://deepmind.google/models/veo/), enz.\n",
     "\n",
     "### Nadelen\n",
