--- a/book/math_foundations/prob/probability.ipynb
+++ b/book/math_foundations/prob/probability.ipynb
@@ -7,10 +7,10 @@
    "source": [
     "# Kansrekenen\n",
     "📚 [^goodfellow]\n",
-    "[^goodfellow]: Deze sectie is gebaseerd op hoofdstuk 3 uit [Goodfellow et al. (2016)](https://www.deeplearningbook.org/)\n",
+    "[^goodfellow]: Deze sectie is onder andere gebaseerd op hoofdstuk 3 uit {cite}`10.1007/s10710-017-9314-z` en Hoofdstuk 1 uit {cite}`10.1117/1.2819119`\n",
     "\n",
     "(target-probability-theory)=\n",
-    "Kansrekenen, waarschijnlijkheidsleer of **probabiliteitstheorie** is een wiskundig kader om uitspraken te doen over onzekerheid. Het laat toe om onzekerheid te kwantificeren en biedt axioma's om nieuwe onzekere uitspraken af te leiden uit bestaande.\n",
+    "Kansrekenen, waarschijnlijkheidsleer of **probabiliteitstheorie** is een wiskundig kader om uitspraken te doen over onzekerheid. Het laat toe om onzekerheid te kwantificeren en biedt axioma's om nieuwe onzekere uitspraken af te leiden uit bestaande. Het kan gezien worden als een uitbreiding van Booleaanse logica naar situaties die onzekerheid inhouden {cite}`10.1017/CBO9780511790423`.\n",
     "\n",
     "> Kans $=$ Waarschijnlijkheid $=$ Probabiliteit  \n",
     "  \n",
@@ -61,7 +61,7 @@
     "[^bayes]: De term [_Bayesiaans_](https://en.wikipedia.org/wiki/Bayesian_probability) is afgeleid van de 18e-eeuwse Engelse wiskundige en theoloog Thomas Bayes, die de eerste wiskundige behandeling gaf van een niet-triviaal probleem van statistische data-analyse met behulp van wat nu bekend staat als Bayesiaanse inferentie. Wiskundige Pierre-Simon Laplace was pionier van en populariseerde wat nu Bayesiaanse kansrekening wordt genoemd.\n",
     "\n",
     ":::{important}\n",
-    "Ondanks het onderscheid in de interpretatie van probabiliteit, zijn {u}`de regels van kansrekenen in beide gevallen gelijk`. Dit is een rechtstreeks gevolg als we uitgaan van een reeks algemeen wenselijke eigenschappen bij het redeneren over onzekerheden (zoals: _Als $A$ zekerder is dan $B$ en $B$ zekerder is dan $C$, dan moet $A$ zekerder zijn dan $C$_; {cite}`10.1112/plms/s2-25.1.338`)\n",
+    "{cite}`10.1119/1.1990764`, bijvoorbeeld, heeft aangetoond dat als we in het geval van Bayesiaanse probabiliteit op zoek gaan naar een wiskundig systeem om te rekenen met cijfers die een _degree of belief_ uitdrukken, we bij dezelfde regels uitkomen als op basis van een frequentistische interpretatie. Dit is een rechtstreeks gevolg als we uitgaan van een reeks algemeen wenselijke eigenschappen (zoals: _Als $A$ zekerder is dan $B$ en $B$ zekerder is dan $C$, dan moet $A$ zekerder zijn dan $C$_).\n",
     ":::"
    ]
   },
