--- a/book/math_foundations/linear_regression/grid.ipynb
+++ b/book/math_foundations/linear_regression/grid.ipynb
@@ -79,7 +79,7 @@
                 "De ruis simuleren we door steekproeven te nemen uit een normale (_Gauss_) verdeling met gemiddelde 0 en standaardafwijking $\\sigma=0.30$[^prob]:\n",
                 "\n",
                 "$$\n",
-                "e_i \\sim N(0, 0.30)\n",
+                "e_i \\sim \\mathcal{N}(0, 0.30)\n",
                 "$$\n",
                 "  \n",
                 "(naming-target)=\n",
@@ -91,7 +91,7 @@
                 "Voor de grootte van de orders $\\pmb{x}$ te simuleren, trekken we 50 samples uit een _uniforme verdeling_[^prob] met de volgende parameters.\n",
                 "\n",
                 "$$\n",
-                "x_i \\sim U(3, 25)\n",
+                "x_i \\sim \\mathcal{U}(3, 25)\n",
                 "$$\n",
                 "\n",
                 "[^prob]: We komen hierop terug in de secties over probabiliteit. "
