--- a/book/math_foundations/prob/probability.ipynb
+++ b/book/math_foundations/prob/probability.ipynb
@@ -414,7 +414,10 @@
     "&= \\frac{1}{6}\n",
     "\\end{aligned}\n",
     "$$\n",
+    "\n",
     "In het geval van continue random variabelen wordt vaak de assumptie gemaakt dat de PDF een Gauss- of normaalverdeling volgt met als algemene vorm:\n",
+    "(target-normal-function)=\n",
+    "\n",
     "$$\n",
     "f(x) = \\frac{1}{\\sqrt{2\\pi\\sigma^2}}e^{-\\frac{(x-\\mu)^2}{2\\sigma^2}}\n",
     "$$\n",
@@ -1208,7 +1211,7 @@
     "\\mathbb{E}[x] = 1 \\cdot \\frac{1}{6} + 2 \\cdot \\frac{1}{6} + 3 \\cdot \\frac{1}{6} + 4 \\cdot \\frac{1}{6} + 5 \\cdot \\frac{1}{6} + 6 \\cdot \\frac{1}{6} = 3.5\n",
     "$$\n",
     ":::\n",
-    "\n",
+    "(target-lineair-expectation)=\n",
     "Verwachte waarden van {u}`lineaire transformaties`:\n",
     "\n",
     "$$\n",
